# NeuroExcess

./: .gitignore  CLAUDE.md  NeuroAccess_Pitch.pptx  Project.md  README.md
backend/: .gitignore  pyproject.toml
extension/: .gitignore  background.ts  options.tsx  package-lock.json  package.json  popup.tsx  tsconfig.json  tsconfig.tsbuildinfo
extension/components/popup/: CalmThemeOptions.tsx  ContrastFixerOptions.tsx  CurrentSiteHeader.tsx  FeatureToggleRow.tsx  GlobalModeSummary.tsx  PopupApp.tsx  ScopeBadge.tsx  Switch.tsx
extension/contents/: neuroaccess.tsx
extension/features/: types.ts
extension/features/contrast-fixer/: contrastEngine.ts
extension/features/global-mode/: GlobalModeSummaryOverlay.tsx  auditPage.ts  autoFix.ts  index.ts  issueTypes.ts  resultStore.ts  summarize.ts
extension/features/reading-ruler/: RulerOverlay.tsx  pointerTracking.ts
extension/features/skip-links/: analyzePage.ts  index.ts  skipLinksDom.ts
extension/features/syllable-highlighting/: ReadingBarOverlay.tsx  extractPageText.ts  readerWidget.tsx  syllabify.ts  syllableTimingEstimator.ts  ttsPlayback.ts
extension/features/voice-commands/: VoiceCommandsOverlay.tsx  commandTable.ts  domActions.ts  (+1 more)
extension/hooks/: useActiveTabHostname.ts
extension/lib/: featureMeta.ts
extension/test-pages/: calm-theme-motion.html  contrast-swatches.html  global-mode-audit.html  reading-ruler-article.html  skip-links-landmarks.html  syllable-sample.html
extension/types/: hypher.d.ts
website/: package-lock.json  package.json
website/src/: App.jsx  index.css  main.jsx
(+22 files in other folders)
